--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "main": "localfs.js",
     "dependencies": {
         "simple-mime": "~0.0.7",
-        "pty.js": "0.3.0"
+        "pty.js": "~0.3.1"
     },
     "devDependencies": {
         "chai": "~1.2.0",
